--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
   @import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300&family=Jost&family=Lexend&family=Mulish&family=Open+Sans&family=Roboto&display=swap');
 
   * {
-    font-family: 'Open Sans', sans-serif !important;
+    font-family: 'Open Sans' !important;
   }
 
   body {
